disunity-derive/tests/04-ignore-unknown-field.stderr
error[E0599]: no variant or associated item named `Unknown` found for enum `ClassVariant` in the current scope
  --> tests/04-ignore-unknown-field.rs:17:27
   |
3  | #[derive(Variant)]
   |          ------- variant or associated item `Unknown` not found here
...
17 |     let _ = ClassVariant::Unknown;
   |                           ^^^^^^^ variant or associated item not found in `ClassVariant`
